<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/input_firstname"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:background="@color/lavender"
            android:hint="@string/firstname"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/input_lastname"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:background="@color/lavender"
            android:hint="@string/lastname"
            android:inputType="textPersonName"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/set_date"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/date"
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:background="@color/lavender"
            android:editable="false"
            android:hint="@string/day_month_year"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="Deprecated" />

        <TextView
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            android:text="@string/input_email"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="196dp"
            android:layout_height="32dp"
            android:background="@color/lavender"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <Button
        android:id="@+id/toPasswordInput"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>