<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/loginTV"
        android:layout_width="196dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/input_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputPasswordFirst"
        android:background="@color/lavender"
        android:layout_width="196dp"
        android:hint="@string/password"
        android:textSize="16sp"
        android:layout_height="32dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTV" />

    <TextView
        android:id="@+id/loginTV2"
        android:layout_width="196dp"
        android:layout_height="32dp"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:text="@string/input_password_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordFirst" />

    <EditText
        android:id="@+id/inputPasswordSecond"
        android:background="@color/lavender"
        android:layout_width="196dp"
        android:textSize="16sp"
        android:layout_height="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginTV2" />

    <Button
        android:id="@+id/toHome"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>